--- a/tutorial-1/vagrant/Vagrantfile
+++ b/tutorial-1/vagrant/Vagrantfile
@@ -10,6 +10,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.define "victim" do |config|
     config.vm.box = BOX_BASE
+    config.vm.hostname = "victim"
     config.ssh.username = LOGIN_NAME 
     config.ssh.password = LOGIN_PASSWORD
   
@@ -31,6 +32,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.define "mitm" do |config|
     config.vm.box = BOX_BASE
+    config.vm.hostname = "mitm"
     config.ssh.username = LOGIN_NAME 
     config.ssh.password = LOGIN_PASSWORD
   
@@ -52,6 +54,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.define "server" do |config|
     config.vm.box = BOX_BASE
+    config.vm.hostname = "server"
     config.ssh.username = LOGIN_NAME 
     config.ssh.password = LOGIN_PASSWORD
   
